<resources>
    <string name="app_name">Arraykart</string>
    <string name="title_activity_home_navigation">HomeNavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">User Name</string>
    <string name="nav_header_subtitle">user.name@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Categories</string>
    <string name="menu_slideshow">Orders</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="facebook_app_id">1594258097572065</string>
    <string name="fb_login_protocol_scheme">fb1594258097572065</string>
    <string name="phoneNumber">+919311900912</string>
    <string name="eMail">yourfriends@arraykart.com</string>
    <string name="further_queries">For further queries, contact us through:</string>
    <string name="title_activity_community">CommunityActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="help_center">Help Center</string>
    <string name="community">Community Buying</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="aadhaar">Aadhaar</string>
    <string name="enter_aadhaar_no">Enter aadhaar No</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="register_to_become_a_community_head">Register to become a Community Head</string>
    <string name="skip">Skip</string>
    <string name="edit_address">Edit Address</string>
    <string name="city">City*</string>
    <string name="locality_area_or_street">Locality, area or street*</string>
    <string name="flat_no_or_building_name">Flat no. or Building name*</string>
    <string name="pincode">Pincode*</string>
    <string name="state">state(solid/liquid)</string>
    <string name="fullname">FullName*</string>
    <string name="mobile_no">Mobile no.*</string>
    <string name="alternative_mobile_no_optional">Alternative Mobile no(optional).*</string>
    <string name="update_your_address">update your address</string>
    <string name="add_new_address">Add new address</string>
    <string name="address_form">Address Form</string>
    <string name="reviews">Reviews</string>
    <string name="user_has_been_already_registered">User Has Been Already Registered!</string>
    <string name="search">search</string>
    <string name="pp_android_arraykart">This Privacy Policy applies to the Arraykart Android Application</string>
    <string name="pp_para1">Arraykart recognizes the importance of maintaining your privacy. We value your privacy and appreciate your trust in us. This Policy describes how we treat user information we collect on Arraykart Android Application and other offline sources. This Privacy Policy applies to current and former users of our Application and to our online customers. By visiting and/or using our application, you agree to this Privacy Policy</string>
    <string name="pp_para2">Arraykart App is a property of Arraykart Techable Private Limited, an Indian Company registered under the Companies Act, 2013 having its registered office at B-133 UGF, Nanhey Park, Uttam Nagar, New Delhi, Delhi - 110 059.</string>
    <string name="pp_contact_info">Contact information. We might collect your name, email, mobile number, phone number, street, city, state, Pincode, country, and IP address</string>
    <string name="pp_billing_payment">Payment and billing information. We might collect your billing name, billing address and payment method when you buy a ticket. We NEVER collect your credit card number or credit card expiry date or other details pertaining to your credit card on our Application. Credit card information will be obtained and processed by our online payment partner CC Avenue.</string>
    <string name="pp_info_you_post">Information you post. We collect the information you post in a public space on our Application or on a third-party social media Application belonging to Arraykart.</string>
    <string name="pp_demographic_info">Demographic information. We may collect demographic information about you, events you like, events you intend to participate in, tickets you buy, or any other information provided by you during the use of our Application. We might collect this as a part of a survey also.</string>
    <string name="pp_other_info">Other information. If you use our Application, we may collect information about your IP address and the browser you\'re using. We might look at what Application you came from, duration of time spent on our Application, pages accessed or what Application you visit when you leave us. We might also collect the type of mobile device you are using, or the version of the operating system your computer or device is running.</string>
    <string name="pp_info_collect1">We collect information in different ways</string>
    <string name="pp_info_collect2">We collect information directly from you. We collect information directly from you when you register for an event or buy tickets. We also collect information if you post a comment on our Applications or ask us a question through phone or email.</string>
    <string name="pp_info_collect3">We collect information from you passively. We use tracking tools like Google Analytics, Google Webmaster, browser cookies and web beacons for collecting information about your usage of our Application.</string>
    <string name="pp_info_collect4">We get information about you from third parties. For example, if you use an integrated social media feature on our Applications. The third-party social media Application will give us certain information about you. This could include your name and email address.</string>
    <string name="pp_info_use">Use of your personal information</string>
    <string name="pp_info_use1">We use information to contact you: We might use the information you provide to contact you for confirmation of a purchase on our Application or for other promotional purposes.</string>
    <string name="pp_info_use2">We use information to respond to your requests or questions. We might use your information to confirm your registration for an event or contest.</string>
    <string name="pp_info_use3">We use information to improve our products and services. We might use your information to customize your experience with us. This could include displaying content based upon your preferences.</string>
    <string name="pp_info_use4">We use information to look at Application trends and customer interests. We may use your information to make our Application and products better. We may combine information we get from you with information about you we get from third parties.</string>
    <string name="pp_info_use5">We use information for security purposes. We may use information to protect our company, our customers, or our Applications.</string>
    <string name="pp_info_use6">We use information for marketing purposes. We might send you information about special promotions or offers. We might also tell you about new features or products. These might be our own offers or products, or third-party offers or products we think you might find interesting. Or, for example, if you buy tickets from us we\'ll enroll you in our newsletter.</string>
    <string name="pp_info_use7">We use information to send you transactional communications. We might send you emails or SMS about your account or a ticket purchase.</string>
    <string name="pp_info_use8">We use information as otherwise permitted by law.</string>
    <string name="pp_info_share">Sharing of information with third-parties</string>
    <string name="pp_info_share1">We will share information with third parties who perform services on our behalf. We share information with vendors who help us manage our online registration process or payment processors or transactional message processors. Some vendors may be located outside of India.</string>
    <string name="pp_info_share2">We will share information with the event organizers. We share your information with event organizers and other parties responsible for fulfilling the purchase obligation. The event organizers and other parties may use the information we give them as described in their privacy policies.</string>
    <string name="pp_info_share3">We will share information with our business partners. This includes a third party who provide or sponsor an event, or who operates a venue where we hold events. Our partners use the information we give them as described in their privacy policies.</string>
    <string name="pp_info_share4">We may share information if we think we have to in order to comply with the law or to protect ourselves. We will share information to respond to a court order or subpoena. We may also share it if a government agency or investigatory body requests. Or, we might also share information when we are investigating potential fraud.</string>
    <string name="pp_info_share5">We may share information with any successor to all or part of our business. For example, if part of our business is sold we may give our customer list as part of that transaction.</string>
    <string name="pp_info_share6">We may share your information for reasons not described in this policy. We will tell you before we do this.</string>
    <string name="pp_email_opt_out">Email Opt-Out</string>
    <string name="pp_email_opt_out1">You can opt out of receiving our marketing emails. To stop receiving our promotional emails, please email unsubscriber@arraykart.com. It may take about ten days to process your request. Even if you opt out of getting marketing messages, we will still be sending you transactional messages through email and SMS about your purchases.</string>
    <string name="pp_third_party_apps">Third party Applications</string>
    <string name="pp_third_party_apps1">If you click on one of the links to third party Applications, you may be taken to Applications we do not control. This policy does not apply to the privacy practices of those Applications. Read the privacy policy of other Applications carefully. We are not responsible for these third-party Applications.</string>
    <string name="pp_change1">This Privacy Policy was last updated on 28.02.2022. From time to time we may change our privacy practices. We will notify you of any material changes to this policy as required by law. We will also post an updated copy on our Application. Please check our Application periodically for updates.</string>
    <string name="pp_change">Updates to this policy</string>
    <string name="pp_jurisdiction">Jurisdiction</string>
    <string name="pp_jurisdiction1">If you choose to visit the Application, your visit and any dispute over privacy is subject to this Policy and the Application\'s terms of use. In addition to the foregoing, any disputes arising under this Policy shall be governed by the laws of India.</string>
    <string name="pp_queries">If you have any questions about this Policy or other privacy concerns, you can also email us at yourfriends@arraykart.com</string>
    <string name="trending">Trending</string>
    <string name="new_arrival">New Arrival</string>
    <string name="best_selling">Best Selling</string>
    <string name="sort_by_cost">Sort By Cost</string>
    <string name="low_to_high">Low to High</string>
    <string name="high_to_low">High to Low</string>
</resources>