<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.akfrontend.arraykart.ui.PrivacyPolicy.PrivacyPolicy">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appbarSmokeWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"

            app:toolbarId="@+id/toolbar">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize">

                <ImageView
                    android:id="@+id/imageView14"
                    android:layout_width="@dimen/back_image_width"
                    android:layout_height="@dimen/back_image_height"
                    app:srcCompat="@drawable/ic_baseline_west_24" />

                <TextView
                    android:id="@+id/textView34"
                    android:layout_width="wrap_content"
                    android:layout_height="35sp"
                    android:layout_marginLeft="40sp"
                    android:text="Privacy Policy"
                    android:textAlignment="center"
                    android:textColor="@color/appbarComponentsblack"
                    android:textSize="@dimen/page_name" />
            </androidx.appcompat.widget.Toolbar>


        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appbar"
        app:layout_constraintVertical_bias="0.0">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_android_arraykart"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_para1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_para2"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_contact_info"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_billing_payment"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_you_post"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_demographic_info"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_other_info"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_collect1"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_collect2"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_collect3"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_collect4"

                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use2"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use3"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use4"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use5"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use6"

                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use7"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_use8"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share2"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share3"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share4"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share5"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_info_share6"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_email_opt_out"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_email_opt_out1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_third_party_apps"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_third_party_apps1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_change"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_change1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_jurisdiction"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_jurisdiction1"
                    android:textColor="@color/text"
                    android:textSize="@dimen/heading_size" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20sp"
                    android:text="@string/pp_queries"
                    android:textColor="@color/heading"
                    android:textSize="@dimen/heading_size" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>