<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20sp"
    tools:context=".Sort.sortPage">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="1dp"
        android:paddingLeft="5dp"
        android:text="Sort by"
        android:textColor="@color/heading"
        android:visibility="gone"
        android:textSize="@dimen/heading_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.ChipGroup

        android:id="@+id/chipFilter1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:paddingStart="10dp"
        app:chipSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:singleSelection="false"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1.1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/trending" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2.1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/new_arrival" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip3.1"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_selling" />
    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:padding="1dp"
        android:paddingLeft="5dp"
        android:text="@string/sort_by_cost"
        android:textColor="@color/heading"
        android:textSize="@dimen/heading_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipFilter1"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.chip.ChipGroup

        android:id="@+id/chipFilter2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:padding="2dp"
        android:paddingStart="10dp"
        app:chipSpacing="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:singleLine="false"
        app:singleSelection="true"
        tools:ignore="MissingConstraints">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip1.3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/low_to_high" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2.3"
            style="@style/CustomChipStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:text="@string/high_to_low" />

    </com.google.android.material.chip.ChipGroup>

    <Button
        android:id="@+id/button2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:text="@string/search"
        android:textColor="@color/white"
        android:textSize="@dimen/heading_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipFilter2" />

</androidx.constraintlayout.widget.ConstraintLayout>